Fri Oct 11 21:55:45 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-lookup.c (diskfs_S_dir_lookup): Temporarily add O_EXLOCK and
	O_SHLOCK to the set of retained flags, until they get added to O_HURD.
	Turn off OPENONLY_STATE_MODES bits in the flags we pass to
	diskfs_make_peropen, not everything *but* them!
	* priv.h (OPENONLY_STATE_MODES): Add O_EXLOCK & O_SHLOCK.

Thu Oct 10 17:22:06 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-lookup.c (diskfs_S_dir_lookup): Frob lock in NEWPI->po, not PO.
	Free NEWPI if we get an error trying to lock it.
	<sys/file.h>: New include.

Thu Oct 10 17:11:05 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* dir-lookup.c (diskfs_S_dir_lookup): Implement O_SHLOCK and
	O_EXLOCK directly here.

Thu Oct 10 10:53:28 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* peropen-rele.c (diskfs_release_peropen): Before freeing PO,
 	release any user lock it's holding.
	<sys/file.h>: New include.
	
Tue Oct  8 15:01:32 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ifsock.c (diskfs_S_ifsock_getsockaddr): Write permission governs
	access to sockets, not read permission.

Mon Oct  7 14:50:04 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-rmdir.c (diskfs_S_dir_rmdir): Return ENOTDIR if NP isn't a dir.

Tue Sep 24 23:51:37 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* opts-version.c (_print_version): Follow version string with newline.

Thu Sep 19 17:59:37 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): Add store.

Wed Sep 18 15:02:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* opts-version.c (_print_version): Change to use new version
	format from the coding standards.

	* opts-std-runtime.c (std_runtime_options): Change --remount to
	--update (keep --remount as a deprecated alias).
	<argp.h>: New include.
	* opts-append-std.c <stdio.h>: New include.
	* dir-lookup.c <stdio.h>: New include.
	
Fri Sep 13 19:15:45 1996  Miles Bader  <miles@gnu.ai.mit.edu>
