@@ -1,0 +1,2 @@
+#define DISKFS_EI
+#include "diskfs.h"
